refactor: usa getFirst() em vez de get(0) no CotacaoBcbAdapter
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>